@@ -8,6 +8,7 @@
 	- Explanation about the blank lessons after 43, in basic module.
 	- Possible to reset progress log of each module individually, as well
 	  as character error charts or touch times charts in adaptability.
+	- Possible to use paragraphs complete texts in Speed module (klavaro -x).
 	* Updated translations:
 	- Croatian.
 	- Danish.
